sumo/tests/jtrrouter/errors/unknown_vType_ignore/options.jtrrouter
--net-file=input_net.net.xml --flows=input_flows.flows.xml --output-file=routes.rou.xml --ignore-errors
